- add max-height and height auto for detail dialog - improve the display of detail dialog (not call directly service methods) - fix bug 3d topo overlaps 2d elements

--- a/src/app/ui/panel-details/dialog/dialog-details.component.css
+++ b/src/app/ui/panel-details/dialog/dialog-details.component.css
@@ -20,7 +20,7 @@ mat-form-field {
 
 .mat-dialog-content {
   padding: 0 !important;
-  height: 100%;
+  height: auto;
   scrollbar-width: none; 
   -ms-overflow-style: none; 
   overflow-y: scroll;
