--- a/src/styles.css
+++ b/src/styles.css
@@ -10,4 +10,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .custom-detail-dialog-container .mat-dialog-container {
     padding-left: 12px;
-  }
+    padding-bottom: 0px;
+ }
+
+ .custom-detail-dialog-container .mat-dialog-content {
+    max-height: 99vh;
+ }
